--- a/pom.xml
+++ b/pom.xml
@@ -82,7 +82,7 @@
         <artifactId>maven-invoker-plugin</artifactId>
         <version>3.2.1</version>
         <configuration>
-          <mavenOpts>-Xdebug -Xrunjdwp:transport=dt_socket,server=y,suspend=y,address=8000</mavenOpts>
+<!--          <mavenOpts>-Xdebug -Xrunjdwp:transport=dt_socket,server=y,suspend=y,address=8000</mavenOpts>-->
           <projectsDirectory>src/it</projectsDirectory>
           <cloneProjectsTo>${project.build.directory}/it</cloneProjectsTo>
           <postBuildHookScript>verify</postBuildHookScript>
