--- a/src/it/k8s/pom.xml
+++ b/src/it/k8s/pom.xml
@@ -70,6 +70,7 @@
               <output>${project.basedir}</output>
               <!-- https://raw.githubusercontent.com/kubernetes/kubernetes/master/api/openapi-spec/swagger.json -->
               <inputSpec>${project.basedir}/test.yaml</inputSpec>
+<!--              <inputSpec>${project.basedir}/swagger.json</inputSpec>-->
               <language>dart2-api</language>
               <enablePostProcessFile>true</enablePostProcessFile>
               <additionalProperties>
