--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 	<artifactId>openapi-dart-generator</artifactId>
 	<packaging>jar</packaging>
 	<name>openapi-dart-generator</name>
-	<version>2.7</version>
+	<version>2.8-SNAPSHOT</version>
 
 	<description>
 		dart2 generator from openapi 3.x spec files. Changing to openapitools dependencies.
@@ -30,7 +30,7 @@
 		<connection>scm:git:git@github.com:dart-ogurets/dart-openapi-maven.git</connection>
 		<developerConnection>scm:git:git@github.com:dart-ogurets/dart-openapi-maven.git</developerConnection>
 		<url>git@github.com:dart-ogurets/dart-openapi-maven.git</url>
-		<tag>openapi-dart-generator-2.7</tag>
+		<tag>HEAD</tag>
 	</scm>
 
 	<properties>
