#12 json enum names and values handling fixed

--- a/src/it/k8s/test.yaml
+++ b/src/it/k8s/test.yaml
@@ -334,12 +334,12 @@ components:
         opType:
           type: string
           enum:
+          - less_or_equal
+          - greater^equal
+          - not=equal
+          - greater-than
           - lessThan
-          - greaterThan
-          - lessOrEqual
-          - greaterOrEqual
           - equal
-          - notEqual
           - matches
       uniqueItems: false
 
