#12 Add inline enum support (#14)
* #12 Add inline enum support

* #12 Improve value handling of inline enum

* #12 Missing branches fixed in Json serialization - regression of enum,

* #12 json enum names and values handling fixed

* #12 Fixing typo

* #12 Supporting multiple enums inline and better enum names are used.

Co-authored-by: Robert Csakany <robert.csakany@blackbelt.hu>

--- a/src/it/k8s/test.yaml
+++ b/src/it/k8s/test.yaml
@@ -323,4 +323,30 @@ components:
           type: array
           items:
             $ref: "#/components/schemas/JSONType"
+    InlineEnum:
+      type: object
+      required:
+        - opType
+        - operation
+        - value
+      properties:
+        value:
+          type: string
+        opType:
+          type: string
+          enum:
+            - less_or_equal
+            - greater^equal
+            - not=equal
+            - greater-than
+            - lessThan
+            - equal
+            - matches
+        comparison:
+          type: string
+          enum:
+            - square
+            - logarithmic
+      uniqueItems: false
+
 
