updated fix for equality

--- a/pom.xml
+++ b/pom.xml
@@ -60,6 +60,13 @@
 			<version>${openapi-codegen-version}</version>
 			<scope>provided</scope>
 		</dependency>
+
+    <dependency>
+      <groupId>junit</groupId>
+      <artifactId>junit</artifactId>
+      <version>4.13</version>
+      <scope>test</scope>
+    </dependency>
 	</dependencies>
 
 	<build>
