fix request date type to be symetric

--- a/src/it/k8s/test.yaml
+++ b/src/it/k8s/test.yaml
@@ -51,6 +51,9 @@ paths:
                   type: string
                 secret:
                   type: string
+                date:
+                  type: string
+                  format: date
                 params:
                   $ref: '#/components/schemas/UniqueEventRequest'
             encoding:
