encoding and decoding generating without complaint
- need correctness checks
- need to deal with extra "inner" types in
serialisers

--- a/src/test/resources/test.yaml
+++ b/src/test/resources/test.yaml
@@ -111,6 +111,26 @@ paths:
                 $ref: "#/components/schemas/com.bluetrainsoftware.AddProps2"
 components:
   schemas:
+    GeocodedWaypoint:
+      type: object
+      description: GeocodedWaypoint
+      properties:
+        geocoderStatus:
+          type: string
+          enum:
+            - OK
+            - ZERO_RESULTS
+        partialMatch:
+          type: boolean
+        placeId:
+          type: string
+        types:
+          type: array
+          items:
+            type: string
+            enum:
+              - STREET_ADDRESS
+              - STREET_NUMBER
     EventRequest:
       properties:
         user_id:
