fixing hashing and serializing internal enums

--- a/src/test/resources/test.yaml
+++ b/src/test/resources/test.yaml
@@ -131,6 +131,12 @@ components:
             enum:
               - STREET_ADDRESS
               - STREET_NUMBER
+    HashTest:
+      properties:
+        fieldOne:
+          type: boolean
+        fieldTwo:
+          type: boolean
     EventRequest:
       properties:
         user_id:
