List<AnyOf<*>> support
+nullSafe
+ add enum class for discriminator
+ hide feature behind listAnyOf additional property flag
+ add setter for value along with discriminator field
+ fix _array_copy for NNBD when array is optional
+ nullsafe hashcode calculation
+ update openapi-codegen-version
+ test package generation
+ make it work under SampleRunner
+ add scenarios to k8s**

--- a/src/it/k8s/pom.xml
+++ b/src/it/k8s/pom.xml
@@ -86,6 +86,9 @@
                 <additionalProperty>
                   pubspec-dev-dependencies=uuid: 2.0.4
                 </additionalProperty>
+                <additionalProperty>
+                  listAnyOf=true
+                </additionalProperty>
               </additionalProperties>
               <globalProperties>
                 <skipFormModel>false</skipFormModel>
