--- a/src/it/k8s_null/pom.xml
+++ b/src/it/k8s_null/pom.xml
@@ -92,6 +92,9 @@
                 <additionalProperty>
                   nullSafe-array-default=true
                 </additionalProperty>
+                <additionalProperty>
+                  listAnyOf=true
+                </additionalProperty>
               </additionalProperties>
               <globalProperties>
                 <skipFormModel>false</skipFormModel>
