Initial work on issue 30

--- a/src/test/resources/test.yaml
+++ b/src/test/resources/test.yaml
@@ -63,7 +63,34 @@ paths:
             application/json:
               schema:
                 $ref: "#/components/schemas/Event"
-#  /event/upcoming2:
+  /event/optional-post:
+    post:
+      tags:
+        - ControlService
+      description: "Sample optional body for post"
+      operationId: optionalPost
+      requestBody:
+        required: false
+        content:
+          application/json:
+            schema:
+              $ref: "#/components/schemas/EventRequest"
+      responses:
+        "200":
+          description: "upcoming events"
+          content:
+            application/yaml:
+              schema:
+                $ref: "#/components/schemas/EventResponse"
+    delete:
+      tags:
+        - ControlService
+      description: "Sample optional body for post"
+      operationId: optionalDelete
+      responses:
+        "204":
+          description: "upcoming events"
+  #  /event/upcoming2:
 #    post:
 #      tags:
 #        - ControlService
@@ -256,21 +283,29 @@ components:
       properties:
         discrim:
           type: string
+        nonNullableArrayOfStrings:
+          type: array
+          items:
+            nullable: false
+            type: string
         readings:
           type: object
           additionalProperties:
+            nullable: false
             type: number
             format: decimal
         extra:
           type: object
           additionalProperties:
             type: array
+            nullable: true
             items:
               $ref: "#/components/schemas/TimeType"
         dependencies:
           type: object
           additionalProperties:
             type: array
+            nullable: true
             items:
               $ref: "#/components/schemas/JSONType"
         otherDeps:
@@ -308,6 +343,7 @@ components:
     TimeType:
       type: string
       format: date-time
+      nullable: true
     Messages:
       type: object
       additionalProperties:
