--- a/src/test/resources/test.yaml
+++ b/src/test/resources/test.yaml
@@ -174,6 +174,8 @@ components:
           type: string
           format: date
     EventResponse:
+      required:
+        - mandatoryList
       properties:
         error:
           type: integer
@@ -183,6 +185,10 @@ components:
           type: array
           items:
             type: number
+        mandatoryList:
+          type: array
+          items:
+            type: string
         listOfIntegers:
           type: array
           items:
