Pass octet stream data straight out without decoding
Introduce extra code in api generation to ensure that
octet streams are not treated as multipart files and
they are always passed out as ApiResponses. This will
have side effects for files we send as well, but there
is currently no good solution for this.

Fixes issue #35

--- a/src/it/k8s/test.yaml
+++ b/src/it/k8s/test.yaml
@@ -34,6 +34,26 @@ paths:
             application/json:
               schema:
                 $ref: "#/components/schemas/EventResponse"
+  /event/kivan/{id}:
+    get:
+      parameters:
+        - name: id
+          in: path
+          required: true
+          schema:
+            type: string
+      tags:
+        - ControlService
+      description: "testing application/octet-stream"
+      operationId: getOctetStream
+      responses:
+        200:
+          description: "content is octet-stream"
+          content:
+            application/octet-stream:
+              schema:
+                type: string
+                format: binary
   /event/getstatus:
     post:
       tags:
