multipart file and datetime/date strings
- supporting multipart file directory
- supporting parameterisation of the datetime
and date type strings

--- a/src/test/resources/test.yaml
+++ b/src/test/resources/test.yaml
@@ -34,6 +34,44 @@ paths:
             application/json:
               schema:
                 $ref: "#/components/schemas/EventResponse"
+  /event/file-test:
+    post:
+      tags:
+        - FileService
+      description: "file post service"
+      operationId: fileMultipartPost
+      requestBody:
+        required: true
+        content:
+          multipart/form-data:
+            schema:
+              type: object
+              properties:
+                username:
+                  type: string
+                avatar:
+                  type: string
+                  format: binary
+      responses:
+        "200":
+          description: yup
+  /event/pure-file-test:
+    post:
+      tags:
+        - FileService
+      description: "file post service"
+      operationId: pureFilePost
+      requestBody:
+        required: true
+        content:
+          application/octet-stream:
+            schema:
+              type: string
+              format: file
+      responses:
+        "200":
+          description: yup
+
   /event/getstatus:
     post:
       tags:
